@@ -50,8 +50,8 @@ Report more of the available information for the selected jobs or job steps,
 subject to any constraints specified.
 
 .TP
-\fB\-n <node_name>\fR, \fB\-\-node=<node_name>\fR
-Report only on jobs allocated to the specified node.
+\fB\-n <hostlist>\fR, \fB\-\-nodes=<hostlist>\fR
+Report only on jobs allocated to the specified node or list of nodes.
 This may either be the \fBNodeName\fR or \fBNodeHostname\fR
 as defined in \fBslurm.conf(5)\fR in the event that they differ.
 A node_name of \fBlocalhost\fR is mapped to the current host name.
