@@ -84,7 +84,7 @@ struct squeue_parameters {
 	int  verbose;
 
 	char* jobs;
-	char* node;
+	hostset_t nodes;
 	char* partitions;
 	char* states;
 	char* steps;
